0027264: Weird difference between two BRepTools::Write() overloads

Assume that the brep file contains DBRep_DrawableShape variable if the file header is absent

test cases